# hello

./: .gitignore  Makefile  README.md  arch.sh  size.pl
c/: Makefile  hello.c
c-stdio/: hello.c
nasm/: Makefile  hello.s
rust/: Cargo.toml  Makefile  build-measure.sh  run.sh
rust-dynamic/: Makefile
rust-msdos/: Cargo.toml  Makefile  README.md  build.rs  cargo-clean-binary  clean.sh  com-lld.ld  com.ld  dos-lld.json  dos.json  i586.json
rust-msdos/.cargo/: config
rust-msdos/src/: idiv.rs  lib.rs  main.rs  startup.c
rust-static/: Cargo.toml  README.md  aarch-apple-darwin-nostd.json  aarch64-apple-darwin-nostd.json  aarch64-apple-darwin.json  aarch64-unknown-linux-gnu.json  aarch64-unknown-linux-nostd.json  docker-run.sh  run.sh  rust-toolchain.toml  x86_64-apple-darwin-nostd.json  x86_64-apple-darwin.json  x86_64-unknown-linux-gnu.json  x86_64-unknown-linux-nostd.json
rust-static-core/: Cargo.toml  Makefile  aarch-apple-darwin-nostd.json  aarch64-apple-darwin-nostd.json  aarch64-unknown-linux-nostd.json  run.sh  x86_64-apple-darwin-nostd.json  x86_64-apple-darwin-static.json  x86_64-apple-darwin.json  x86_64-unknown-linux-nostd.json  x86_64-unkown-linux-musl.json  x86_64-unkown-linux-nostd.json
rust-static-core/.cargo/: config
rust-static-core/src/: main.rs
rust-static/.cargo/: config
rust-static/src/: main.rs
rust-wasi/: Makefile  src
rust-wasi/.cargo/: config
rust-wasm/: Cargo.toml  Makefile
rust-wasm/src/: index.html
rust/.cargo/: config
rust/src/: main.rs
swift/: Makefile
