[package]
name = "dos"
version = "0.3.0"
authors = ["Satoshi Moriai <satoshi.moriai@gmail.com>"]
edition = "2018"
default-run = "hello"

[dependencies]
heapless = "0.5.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s" #or "z"

[[bin]]
name = "idiv"
#path = "src/idiv.rs"

[[bin]]
name = "heapless"
#path = "src/heapless.rs"

[[bin]]
name = "hello"
#path = "src/hello.rs"
