[package]
name = "dos"
version = "0.3.0"
authors = ["Satoshi Moriai <satoshi.moriai@gmail.com>"]
edition = "2018"
default-run = "hello"

[dependencies]
heapless = "0.5.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s" #or "z"

[[bin]]
name = "idiv"

[[bin]]
name = "hello"

[[bin]]
name = "hello1"

[[bin]]
name = "hello2"
